--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
 </head>
 
 <body>
-    <header>
-        <h1>i am All Ok</h1>
+    <header class="header">
+        <div class="banner-container">
+            <h2 class="banner-title">All Thinks Are Possible If You believe</h2>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <button class="banner-btn">Contact Us</button>
+        </div>
     </header>
     <main>
 
