--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/frame1.css">
+    <script src="https://kit.fontawesome.com/6d694fcff5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -22,7 +23,50 @@
         </div>
     </header>
     <main>
+        <section>
+            <div class="person-container">
+                <img src="images/person.png" alt="">
+                <div class="person-detailes">
+                    <h3 class="person-title">My failures of previous year</h3>
+                    <p class="banner-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                        has
+                        roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        Richard
+                        McClintock.</p>
+                    <p><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
+                    <p><i class="fa-solid fa-check"></i> Contrary to popular belief.</p>
+                    <p><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</p>
+                    <p><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
+                    <p><i class="fa-solid fa-check"></i> Contrary to popular simply.</p>
+                </div>
+            </div>
+        </section>
+        <section id="my-plan">
+            <h3 class="person-title">My Plans</h3>
+            <div class="plan-container">
+                <div class="plan-iteam">
+                    <img src="images/icons/web.png" alt="">
+                    <h3 class="plan-title">Web Development</h3>
+                    <p class="plan-description">I want to start</p>
+                </div>
+                <div class="plan-iteam">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="plan-title">Javascript</h3>
+                    <p class="plan-description">I want to learn</p>
+                </div>
+                <div class="plan-iteam">
+                    <img src="images/icons/smoke.png" alt="">
+                    <h3 class="plan-title">Smoking Habit</h3>
+                    <p class="plan-description">I want to end</p>
+                </div>
+                <div class="plan-iteam">
+                    <img src="images/icons/ecom.png" alt="">
+                    <h3 class="plan-title">ecommerce</h3>
+                    <p class="plan-description">I want to develop</p>
+                </div>
 
+            </div>
+        </section>
     </main>
     <footer>
 
