--- a/index.html
+++ b/index.html
@@ -67,9 +67,33 @@
 
             </div>
         </section>
+        <section class="watch-container">
+            <div class="watchman">
+                <h3 class="watch-title">Awlays keep a positive mindset</h3>
+                <button class="watch-btn">Call Now</button>
+            </div>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <div class="footer-column">
+            <h3 class="future-title">Future</h3>
+            <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="email">Email : info@gmail.com</p>
+            <p class="phone">Phone : 01500 00 00 00</p>
+            <div class="icon-iteam">
+                <a href=""><img src="images/icons/fb.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                <a href=""><img src="images/icons/youtube.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="subscribe-title">Subscribe</h3>
+            <form class="contact" action="">
+                <input type="email" name="" placeholder="Enter your email" id="">
+                <input class="Subscribe-btn" type="submit" value="Subscribe">
+            </form>
+        </div>
     </footer>
 </body>
 
